# libquicr

./: .gitmodules
cmd/: CMakeLists.txt  TRANSCODE_README.md  qc_transcode.cpp  transcode_client.cpp  transcode_client.h
cmd/examples/: CMakeLists.txt  CatalogSubscribeTrackHandler.h  IMPLEMENTATION_SUMMARY.md  MyPublishTrackhandler.cpp  MyPublishTrackhandler.h  MySubscribeTrackHandler.cpp  MySubscribeTrackHandler.h  TRANSCODE_README.md  TranscodeRequestSubscribeHandler.h  TranscodeSubscribeTrackHandler.h  VideoSubscribeTrackHandler.h  async_stdin_reader.cpp  async_stdin_reader.h  base64_tool.h  catalog.hpp  client.cpp  client2.cpp  ffmpeg_cmaf_splitter.cpp  ffmpeg_cmaf_splitter.hpp  ffmpeg_moq_adapter.cpp  ffmpeg_moq_adapter.h  helper_functions.h  media.cpp  media.h  moof_mdat_interleaved.h  qc_request.cpp  qc_transcode.cpp  qc_video.cpp  server.cpp  subscriber_util.cpp  subscriber_util.h  transcode_client.cpp  transcode_client.h  transcode_request.h
dev/: _pub.sh  _rel.sh  _sub.sh  dual_video_generator.sh  start.sh
include/quicr/: hash.h  track_name.h
